RESOLVED FIXED239098
Fix PlayStation build after r292696
https://bugs.webkit.org/show_bug.cgi?id=239098
Summary Fix PlayStation build after r292696
Don Olmstead
Reported 2022-04-11 17:44:11 PDT
...
Attachments
[fast-cq] Patch (2.38 KB, patch)
2022-04-11 17:55 PDT, Don Olmstead
no flags
Don Olmstead
Comment 1 2022-04-11 17:55:56 PDT
Created attachment 457304 [details] [fast-cq] Patch
EWS
Comment 2 2022-04-11 18:33:55 PDT
Committed r292753 (249537@main): <https://commits.webkit.org/249537@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 457304 [details].
Radar WebKit Bug Importer
Comment 3 2022-04-11 18:34:15 PDT
Darin Adler
Comment 4 2022-04-12 11:37:03 PDT
Comment on attachment 457304 [details] [fast-cq] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=457304&action=review > Source/WebDriver/playstation/WebDriverServicePlayStation.cpp:48 > + capabilities.platformName = String::fromLatin1("playstation"); The preferred idiom here would be: capabilities.platformName = "playstation"_s; Unless that doesn’t compile for some reason?
Chris Dumez
Comment 5 2022-04-12 11:53:12 PDT
Comment on attachment 457304 [details] [fast-cq] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=457304&action=review >> Source/WebDriver/playstation/WebDriverServicePlayStation.cpp:48 >> + capabilities.platformName = String::fromLatin1("playstation"); > > The preferred idiom here would be: > > capabilities.platformName = "playstation"_s; > > Unless that doesn’t compile for some reason? Agreed, that's a clear use case for ASCIILiteral / ""_s.
Note You need to log in before you can comment on or make changes to this bug.