Fix PlayStation build after r292696 https://bugs.webkit.org/show_bug.cgi?id=239098

Unreviewed build fix.


Source/WebDriver:

* playstation/WebDriverServicePlayStation.cpp:
(WebDriver::WebDriverService::platformCapabilities):

Source/WTF:

* wtf/playstation/LanguagePlayStation.cpp:
(WTF::platformUserPreferredLanguages):

Canonical link: https://commits.webkit.org/249537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292753 268f45cc-cd09-0410-ab3c-d52691b4dbfc